feat: 重构UI设计系统并优化用户体验
- 添加DESIGN_SYSTEM.md定义设计规范
- 重构whois-form组件为现代化输入体验
- 更新card和badge组件样式
- 重写首页和域名详情页布局
- 引入新的动画和过渡效果
- 更新全局样式和主题配置
- 添加stylelint配置和lint脚本
- 优化主题切换按钮交互
- 删除不再需要的eslintignore文件

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:code": "eslint",
+    "lint:style": "stylelint \"src/**/*.css\"",
+    "lint:md": "markdownlint README.md",
+    "lint:all": "npm run lint:code && npm run lint:style && npm run lint:md"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -26,6 +30,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "whois-json": "^2.0.4"
   },
   "devDependencies": {
@@ -36,6 +41,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "markdownlint-cli": "^0.47.0",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
